--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
+	"id": "obsidian-auto-backlink",
+	"name": "Auto Backlink",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
+	"description": "Automatically adds backlinks to the current notes so you can make your way back to the main MOC.",
+	"author": "Tobey Gronow",
 	"authorUrl": "https://obsidian.md",
 	"isDesktopOnly": false
 }
