--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
+	"id": "obsidian-mentions-in-status-bar",
+	"name": "Mentions in Status Bar",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"isDesktopOnly": false
+	"description": "Displays all the mentions of the current file in the status bar.",
+	"author": "Tobey Gronow",
+	"authorUrl": "https://twitter.com/JINC_Games",
+	"isDesktopOnly": true
 }
